<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:background="@color/colorShadeForFrontEndElements"
        tools:visibility="visible">

    <TextView
            android:id="@+id/cardNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:textColor="@color/colorMainText"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:text="Этиловый камикадзе"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintVertical_bias="0.039"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardsExamplesListingRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardNameTV"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
            android:id="@+id/cardStatsTV"
            android:text="@string/cardStatsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainText"
            android:textSize="16sp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/cardsExamplesListingRV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.5" android:textStyle="bold"/>

    <TextView
            android:id="@+id/cardStatsRPTV"
            android:text="@string/rockPowerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainText"
            android:textSize="12sp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/cardStatsTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.017" android:textStyle="italic"/>

    <TextView
            android:id="@+id/cardStatsMADTV"
            android:text="@string/maxAlcoholDigestibilityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainText"
            android:textSize="12sp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/cardStatsRPTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            app:layout_constraintHorizontal_bias="0.025" android:textStyle="italic"/>

    <TextView
            android:id="@+id/cardStatsABPTV"
            android:text="@string/acousticBrainProtectionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainText"
            android:textSize="12sp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/cardStatsMADTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            app:layout_constraintHorizontal_bias="0.025"
            android:textStyle="italic"/>

    <TextView
            android:id="@+id/totalCardsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMainText"
            android:textSize="12sp"
            android:gravity="start"
            android:text="@string/totalCardsInDeck"
            app:layout_constraintTop_toBottomOf="@id/cardStatsABPTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.025"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>